--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser": "2.1.2",
     "@angular/platform-browser-dynamic": "2.1.2",
     "@angular/router": "3.1.2",
+    "angular2-google-maps": "^0.16.0",
     "core-js": "^2.4.1",
     "ng2-bootstrap": "^1.1.16",
     "reflect-metadata": "^0.1.3",
